--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../godot_builds/index.html"
+export_path="../../godot_builds/water_shader_3/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
